@@ -2346,18 +2346,18 @@ sub ExpandAbbreviationsCallback {
 
     # Convert '@param', but not '\@param'.
     #$text =~ s/\@(\w+((\.|->)\w+)*)/<parameter>$1<\/parameter>/g;
-    $text =~ s/([^\\])\@(\w+((\.|->)\w+)*)/$1<parameter>$2<\/parameter>/g;
+    $text =~ s/(\A|[^\\])\@(\w+((\.|->)\w+)*)/$1<parameter>$2<\/parameter>/g;
     $text =~ s/\\\@/\@/g;
 
     # Convert '%constant', but not '\%constant'.
     # Also allow negative numbers, e.g. %-1.
     #$text =~ s/\%(-?\w+)/&MakeXRef($1, &tagify($1, "literal"));/eg;
-    $text =~ s/([^\\])\%(-?\w+)/$1.&MakeXRef($2, &tagify($2, "literal"));/eg;
+    $text =~ s/(\A|[^\\])\%(-?\w+)/$1.&MakeXRef($2, &tagify($2, "literal"));/eg;
     $text =~ s/\\\%/\%/g;
 
     # Convert '#symbol', but not '\#symbol'.
     #$text =~ s/#([\w\-:]+)/&MakeHashXRef($1, "type");/eg;
-    $text =~ s/([^\\])#([\w\-:]+)/$1.&MakeHashXRef($2, "type");/eg;
+    $text =~ s/(\A|[^\\])#([\w\-:]+)/$1.&MakeHashXRef($2, "type");/eg;
     $text =~ s/\\#/#/g;
   }
 
